# involucratum

./: .editorconfig  .gitignore  involucratum.code-workspace
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/routers/v1/: __init__.py  router.py
backend/app/routers/v1/item/: __init__.py  get_item.py  list_items.py  router.py
backend/app/routers/v1/user/: __init__.py  get_user.py  list_users.py  router.py
frontend/: package-lock.json  package.json
