[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.115.12"]

[dependency-groups]
dev = ["ruff>=0.11.7"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
